Project

General

Profile

Actions

Bug #15977

closed

rgw: updating custom metadata on account/container is broken

Added by Radoslaw Zarzynski almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
jewel
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Introduced in: 3f3b18bff16f6a5b36987f888ba3f2a0d1ea3155.


Related issues 3 (0 open3 closed)

Related to rgw - Bug #15779: rgw: account/container metadata not actually present in a request are deleted during POST through Swift APIResolvedRadoslaw Zarzynski05/09/2016

Actions
Related to rgw - Backport #15967: jewel: rgw: account/container metadata not actually present in a request are deleted during POST through Swift APIResolvedAbhishek VarshneyActions
Copied to rgw - Backport #16039: jewel: rgw: updating custom metadata on account/container is brokenResolvedAbhishek VarshneyActions
Actions #1

Updated by Radoslaw Zarzynski almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Radoslaw Zarzynski almost 8 years ago

  • Related to Bug #15779: rgw: account/container metadata not actually present in a request are deleted during POST through Swift API added
Actions #3

Updated by Radoslaw Zarzynski almost 8 years ago

  • Related to Backport #15967: jewel: rgw: account/container metadata not actually present in a request are deleted during POST through Swift API added
Actions #4

Updated by Radoslaw Zarzynski almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 8 years ago

  • Copied to Backport #16039: jewel: rgw: updating custom metadata on account/container is broken added
Actions #6

Updated by Loïc Dachary almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF