rgw: fix update of already existing account/bucket's custom attributes.

Introduced in: 3f3b18bff16f6a5b36987f888ba3f2a0d1ea3155.
Fixes: http://tracker.ceph.com/issues/15977
Signed-off-by: Radoslaw Zarzynski <rzarzynski@mirantis.com>

(cherry picked from commit d6129e664fc8d25e70bfaf83e340703005f8f73f)